iteración de cards

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,18 @@
 <main class="main">
   <header class="brand-home">
     <img class="bran-logo" src="../assets/img/Home.png" alt="">
+
+    <section>
+      <form>
+        <input type="text" placeholder="Filter by city" />
+        <button class="primary" type="button">Search</button>
+      </form>
+    </section>
+    
   </header>
 
   <section class="content">
-  <app-home> </app-home>
+    <app-home> </app-home>
   </section>
 
 </main>
