--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,7 @@
-<section>
-  <form>
-    <input type="text" placeholder="Filter by city" />
-    <button class="primary" type="button">Search</button>
-  </form>
 
-  <section class="results">
-    <app-housing-location [housingLocation]="housingLocation"> </app-housing-location>
-  </section>
+<section class="results">
+  <app-housing-location *ngFor="let housingLocation of housingLocationLits"
+  [housingLocation]="housingLocation"> 
+</app-housing-location>
 </section>
-
-
-
 
