Implementación de detalles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,11 @@
+<!-- contiene el nav igm y el filtro  -->
+
 <main class="main">
 
-  <a routerLink="['/']">
     <header class="brand-home">
+     <a routerLink="/">
       <img class="bran-logo" src="../assets/img/Home.png" alt="">
+    </a>    
 
     <section>
       <form>
@@ -11,9 +14,11 @@
       </form>
     </section>
   </header>
-</a>
+
 
   <section class="content">
+
+    <!-- Contenido de la pagina, homeComponet -->
     <router-outlet/>
   </section>
 
