--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,9 @@
-
 <section class="results">
-  <app-housing-location *ngFor="let housingLocation of housingLocationLits"
-  [housingLocation]="housingLocation"> 
-</app-housing-location>
+  <!-- contenido ierado de las cartas (housing.servise) -->
+  <app-housing-location
+    *ngFor="let housingLocation of housingLocationLits"
+    [housingLocation]="housingLocation"
+  >
+  </app-housing-location>
 </section>
-
+ 
