--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -1,1 +1,16 @@
-<p>details works!</p>
+<article class="section_details" >
+    <img 
+     class="listing-photo" [src]="hosinglocation?.photo" alt="Image house" crossorigin>
+
+     <section class="listing-description">
+        <h2 class="listing-heading">{{ hosinglocation?.name }}</h2>
+        <p class="listing-location">{{hosinglocation?.city}}, {{hosinglocation?.state}}</p>
+
+        <h2 class="secttion-heading"> About this houting location:</h2>
+        <ul>
+            <li>units vailable:  {{ hosinglocation?.availableUnits}}</li>
+            <li>Does this location have wifi:  {{ hosinglocation?.wifi}}</li>
+            <li>Does this locationhave laundry:  {{ hosinglocation?.laundry}}</li>
+        </ul>
+     </section>
+</article>
