--- a/src/app/details/details.component.scss
+++ b/src/app/details/details.component.scss
@@ -1,54 +1,84 @@
 .section_details{
     display: flex;
     margin: 5%;
-    gap: 30px;
+    gap: 40px;
+    
 }
 
-.listing-description{
+.listing_description{
   border-radius: 20px;
   background: #E5D9F2;
-  text-align: center;
   gap: 10px;
+  padding: 2%;
   display: flex;
-  justify-content: center;
   flex-direction: column;
-  width:40%;
+  max-width: 40%;
+  align-items: center;
   }
 
-.listing-photo{
+  .Formulario{
+    display: flex;
+    
+  }
+
+.listing_photo{
   width: 600px;
-  height: 400px;
+  height: 300px;
   border-radius: 20px;
 }
 
 
-  .listing-heading {
-    color: var(--primary-color);
-    font-size: 25pt;
+  .listing_heading {
+    color: black;
+    font-size: 18pt;
   }
 
-  .listing-location {
-    font-size: 15pt;
-    margin-bottom: 30px;
-  }
-
-  .secttion-heading{
-    color: var(--primary-color);
+  .sectionLocationHouse{
+    display: flex;
+    justify-content: center;
+    font-size: 13pt;
+     margin-bottom: 15px;
   }
 
   // estilos de la lista 
-  li {
-    list-style-type: none;
+  .secttion_heading{
+    color: var(--primary-color);
   }
+
   
-  .listing-features li {
-    font-size: 14pt;
+  li{
+    list-style-type:none;
   }
-  
-  .listing-apply .section-heading {
-    font-size: 18pt;
-    margin-bottom: 15px;
+
+
+  //estilos del fromulario 
+  .form{
+    
   }
+
+
+
+
+.FormRegistro{
+  font-size: 12px;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
+
+}
+
+.inputRegistro{
+  padding: 5px;
+  border: none;
+  border-radius: 10px;
+}
+
+.iconLocation{
+  width: 20px;
+}
+
 
  
   @media (max-width: 1024px) {
